--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-    "buddhistSun": "buddhist Sun",
+    "buddhistSun": "Buddhist Sun",
     "@buddhistSun": {
       "description": "Title for app"
     }
