--- a/lib/l10n/app_my.arb
+++ b/lib/l10n/app_my.arb
@@ -1,3 +1,45 @@
 {
-    "buddhistSun": "ဗုဒ္ဓနေ!"
+    "buddhistSun": "ဗုဒ္ဓနေ!",
+    "noon": "နေ့လညျ၊မှနျးတညျ့",
+    "dawn": "အရုဏျတကျ",
+    "timer": "အခြိနျတိုငျးကိရိယာ",
+    "gps": "ဂြီပီအကျစျ",
+    "settings": "နောကျခံ၊ဆကျတငျ",
+    "help": "အကူအညီ",
+    "about": "အကွောငျး၊ခနျ့",
+    "licenses": "လိုငျစငျ",
+    "not_set": "မသတျမှတျထား",
+    "solar_noon": "နရေောငျခွညျမှနျးတညျ့”",
+    "gmt_offset": "ဂြီအမျတီ အခြိနျကှာခွားခကြျ",
+    "hours": "နာရီ",
+    "astronomical_twilight": "နက်ခတဗဒေနှငျ့ဆိုငျသော ဆညျးဆာ",
+    "nautical_twilight": "ရကွေောငျးနှငျ့ဆိုငျသော ဆညျးဆာ”",
+    "civil_twilight": "မွို့ပွဆညျးဆာ",
+    "sunrise": "နထှေကျခြိနျ",
+    "date": "ရကျစှဲ",
+    "current_time": "လကျရှိအခြိနျ",
+    "late": "နောကျကသြညျ",
+    "time_left": "ကနြျရှိသောအခြိနျ",
+    "speech_notify": "မိနျ့ခှနျး အကွောငျးကွားသညျ",
+    "screen_always_on": "မကြျနှာပွငျအမွဲဖှငျ့ထားသညျ",
+    "speech_in_background": "နောကျခံစကားပွော",
+    "volume": "ထုထညျ၊ပမာဏ",
+    "press_wait": "နှိပျပွီးစောငျ့ပါ",
+    "get_gps": "ဂြီပီအကျစျ ရသညျ",
+    "save_gps": "ဂြီပီအကျစျ သိမျးသညျ",
+    "set_gps_city": "ဂြီပီအကျစျမွို့သတျမှတျပါ",
+    "previous_gps_is": "ယခငျဂြီပီအကျစျဖွစျသညျ",
+    "decimal_number": "ဒသမကိနျး",
+    "current_offset_is": "လကျရှိအခြိနျကှာခွားခကြျဖွစျသညျ",
+    "safety": "လုံခွုံမှု",
+    "none": "ဘာမြှ၊ဘယျဟာမြှ",
+    "minute1": "တစျမိနစျ",
+    "minutes2": "နှစျမိနစျ",
+    "minutes3": "သုံးမိနစျ",
+    "minutes4": "လေးမိနစျ",
+    "minutes5": "ငါးမိနစျ",
+    "minutes10": "ဆယျမိနစျ",
+    "na_uyana": "Na-Uyana",
+    "pa_auk": "ဖားအောကျ",
+    "search_for_city": "မွို့ ရှာရနျ"
 }
