removed onecontext which broke things and didn't work anyway

--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -1,45 +1,45 @@
 {
-    "buddhistSun": "බෞද්ධ හිරු!",
-    "noon": "Noon",
-    "dawn": "Dawn",
-    "timer": "Timer",
-    "gps": "GPS",
-    "settings": "Settings",
-    "help": "Help",
-    "about": "About",
-    "licenses": "Licenses",
-    "not_set": "Not Set",
-    "solar_noon": "Solar Noon",
-    "gmt_offset": "GMT Offset",
-    "hours": "hours",
-    "astronomical_twilight": "Astronomical Twilight",
-    "nautical_twilight": "Nautical Twilight",
-    "civil_twilight": "Civil Twilight",
-    "sunrise": "Sunrise",
-    "date": "Date",
-    "current_time": "Current TIme",
-    "late": "Late",
-    "time_left": "Time Left",
-    "speech_notify": "Speech Notify",
-    "screen_always_on": "Screen Always On",
-    "speech_in_background": "Speech in backgroun",
-    "volume": "Volume",
-    "press_wait": "Press and wait for new GPS.",
-    "get_gps": "Get GPS",
-    "save_gps": "Save GPS",
-    "set_gps_city": "Set GPS city name by Internet",
-    "previous_gps_is": "Previous GPS is",
-    "decimal_number": "Decimal Number",
-    "current_offset_is": "Current offset is",
-    "safety": "Safety",
-    "none": "none",
-    "minute1": "1 minute",
-    "minutes2": "2 minutes",
-    "minutes3": "3 minutes",
-    "minutes4": "4 minutes",
-    "minutes5": "5 minutes",
-    "minutes10": "10 minutes",
-    "na_uyana": "Na-Uyana",
-    "pa_auk": "Pa-Auk",
-    "search_for_city": "Search for city"
+    "buddhistSun":              "බෞද්ධ හිරු!",
+    "noon":                     "දහවල්",
+    "dawn":                     "අලුයම",
+    "timer":                    "ටයිමර්",
+    "gps":                      "GPS",
+    "settings":                 "සැකසුම්",
+    "help":                     "උදව්",
+    "about":                    "ගැන",
+    "licenses":                 "බලපත්ර",
+    "not_set":                  "සකසා නැත",
+    "solar_noon":               "සූර්ය දවල්",
+    "gmt_offset":               "GMT ඕෆ්සෙට්",
+    "hours":                    "පැය",
+    "astronomical_twilight":    "තාරකා විද්‍යාත්මක ට්වි",
+    "nautical_twilight":        "නාවික සැඳෑව",
+    "civil_twilight":           "සිවිල් අන්ධකාරය",
+    "sunrise":                  "හිරු උදාව",
+    "date":                     "දිනය",
+    "current_time":             "දැන් වේලාව",
+    "late":                     "නැසීගිය",
+    "time_left":                "ඉතිරි කාලය",
+    "speech_notify":            "කථන දැනුම්දීම",
+    "screen_always_on":         "තිරය සැමවිටම ක්‍රියාත්මකයි",
+    "speech_in_background":     "පසුපසට කථා කරන්න",
+    "volume":                   "වෙළුම",
+    "press_wait":               "එෆ් ඔබා බලා සිටින්නw GPS.",
+    "get_gps":                  "ජීපීඑස් ලබා ගන්න",
+    "save_gps":                 "ජීපීඑස් සුරකින්න",
+    "set_gps_city":             "ජීපීඑස් නගර අංකය සකසන්නInternet",
+    "previous_gps_is":          "පෙර ජීපීඑස් වේ",
+    "decimal_number":           "දශම අංකය",
+    "current_offset_is":        "වර්තමාන ඕෆ්සෙට්",
+    "safety":                   "ආරක්ෂාව",
+    "none":                     "නැත",
+    "minute1":                  "1 විනාඩියක්",
+    "minutes2":                 "විනාඩි 2",
+    "minutes3":                 "විනාඩි 3",
+    "minutes4":                 "විනාඩි 4",
+    "minutes5":                 "විනාඩි 5",
+    "minutes10":                "විනාඩි 10",
+    "na_uyana":                 "නා-උයන",
+    "pa_auk":                   "පා-ඕක්",
+    "search_for_city":          "නගරය සොයන්න"
 }
