--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,45 +1,45 @@
 {
-    "buddhistSun": "佛教太阳",
-    "noon": "Noon",
-    "dawn": "Dawn",
-    "timer": "Timer",
-    "gps": "GPS",
-    "settings": "Settings",
-    "help": "Help",
-    "about": "About",
-    "licenses": "Licenses",
-    "not_set": "Not Set",
-    "solar_noon": "Solar Noon",
-    "gmt_offset": "GMT Offset",
-    "hours": "hours",
-    "astronomical_twilight": "Astronomical Twilight",
-    "nautical_twilight": "Nautical Twilight",
-    "civil_twilight": "Civil Twilight",
-    "sunrise": "Sunrise",
-    "date": "Date",
-    "current_time": "Current TIme",
-    "late": "Late",
-    "time_left": "Time Left",
-    "speech_notify": "Speech Notify",
-    "screen_always_on": "Screen Always On",
-    "speech_in_background": "Speech in backgroun",
-    "volume": "Volume",
-    "press_wait": "Press and wait for new GPS.",
-    "get_gps": "Get GPS",
-    "save_gps": "Save GPS",
-    "set_gps_city": "Set GPS city name by Internet",
-    "previous_gps_is": "Previous GPS is",
-    "decimal_number": "Decimal Number",
-    "current_offset_is": "Current offset is",
-    "safety": "Safety",
-    "none": "none",
-    "minute1": "1 minute",
-    "minutes2": "2 minutes",
-    "minutes3": "3 minutes",
-    "minutes4": "4 minutes",
-    "minutes5": "5 minutes",
-    "minutes10": "10 minutes",
-    "na_uyana": "Na-Uyana",
-    "pa_auk": "Pa-Auk",
-    "search_for_city": "Search for city"
+    "buddhistSun":              "佛教太阳",
+    "noon":                     "中午",
+    "dawn":                     "黎明",
+    "timer":                    "计时器",
+    "gps":                      "全球定位系统",
+    "settings":                 "设置",
+    "help":                     "帮助",
+    "about":                    "关于",
+    "licenses":                 "许可证",
+    "not_set":                  "没有设置",
+    "solar_noon":               "《太阳正午》",
+    "gmt_offset":               "格林威治标准时间偏移",
+    "hours":                    "小时",
+    "astronomical_twilight":    "天文双ght",
+    "nautical_twilight":        "《航海黄昏",
+    "civil_twilight":           "《公民黄昏》",
+    "sunrise":                  "日出",
+    "date":                     "日期",
+    "current_time":             "当前时间",
+    "late":                     "晚了",
+    "time_left":                "剩余时间",
+    "speech_notify":            "语音通知",
+    "screen_always_on":         "屏幕常亮",
+    "speech_in_background":     "在 backgr 中的演讲n",
+    "volume":                   "体积",
+    "press_wait":               "按下并等待 f new GPS.",
+    "get_gps":                  "获取 GPS",
+    "save_gps":                 "保存 GPS",
+    "set_gps_city":             "设置 GPS 城市名称by Internet",
+    "previous_gps_is":          "以前的 GPS 是",
+    "decimal_number":           "十进制数",
+    "current_offset_is":        "当前偏移",
+    "safety":                   "安全",
+    "none":                     "没有任何",
+    "minute1":                  "1分钟",
+    "minutes2":                 "2分钟",
+    "minutes3":                 "3分钟",
+    "minutes4":                 "4 分钟",
+    "minutes5":                 "5分钟",
+    "minutes10":                "10分钟",
+    "na_uyana":                 "纳乌亚娜",
+    "pa_auk":                   "Pa-Auk",
+    "search_for_city":          "搜索城市"
 }
