--- a/lib/l10n/app_my.arb
+++ b/lib/l10n/app_my.arb
@@ -1,48 +1,62 @@
 {
     "buddhistSun": "ဗုဒ္ဓနေ!",
-    "noon": "နေ့လညျ၊မှနျးတညျ့",
-    "dawn": "အရုဏျတကျ",
-    "timer": "အခြိနျတိုငျးကိရိယာ",
-    "gps": "ဂြီပီအကျစျ",
-    "settings": "နောကျခံ၊ဆကျတငျ",
-    "help": "အကူအညီ",
-    "about": "အကွောငျး၊ခနျ့",
-    "licenses": "လိုငျစငျ",
-    "not_set": "မသတျမှတျထား",
-    "solar_noon": "နရေောငျခွညျမှနျးတညျ့”",
-    "gmt_offset": "ဂြီအမျတီ အခြိနျကှာခွားခကြျ",
-    "hours": "နာရီ",
-    "astronomical_twilight": "နက်ခတဗဒေနှငျ့ဆိုငျသော ဆညျးဆာ",
-    "nautical_twilight": "ရကွေောငျးနှငျ့ဆိုငျသော ဆညျးဆာ”",
-    "civil_twilight": "မွို့ပွဆညျးဆာ",
-    "sunrise": "နထှေကျခြိနျ",
-    "date": "ရကျစှဲ",
-    "current_time": "လကျရှိအခြိနျ",
-    "late": "နောကျကသြညျ",
-    "time_left": "ကနြျရှိသောအခြိနျ",
-    "speech_notify": "မိနျ့ခှနျး အကွောငျးကွားသညျ",
-    "screen_always_on": "မကြျနှာပွငျအမွဲဖှငျ့ထားသညျ",
-    "speech_in_background": "နောကျခံစကားပွော",
-    "volume": "ထုထညျ၊ပမာဏ",
-    "press_wait": "နှိပျပွီးစောငျ့ပါ",
-    "get_gps": "ဂြီပီအကျစျ ရသညျ",
-    "save_gps": "ဂြီပီအကျစျ သိမျးသညျ",
-    "set_gps_city": "ဂြီပီအကျစျမွို့သတျမှတျပါ",
-    "previous_gps_is": "ယခငျဂြီပီအကျစျဖွစျသညျ",
-    "decimal_number": "ဒသမကိနျး",
-    "current_offset_is": "လကျရှိအခြိနျကှာခွားခကြျဖွစျသညျ",
-    "safety": "လုံခွုံမှု",
-    "none": "ဘာမြှ၊ဘယျဟာမြှ",
-    "minute1": "တစျမိနစျ",
-    "minutes2": "နှစျမိနစျ",
-    "minutes3": "သုံးမိနစျ",
-    "minutes4": "လေးမိနစျ",
-    "minutes5": "ငါးမိနစျ",
-    "minutes10": "ဆယျမိနစျ",
-    "na_uyana": "နန်းဦးရန်နာ",
-    "pa_auk": "ဖားအောကျ",
-    "search_for_city": "မွို့ ရှာရနျ",
-    "help_content": "တွက်ချက်မှုများ၊ \n တွက်ချက်မှုများသည် Jean Meeus ၏နက္ခတ္တဗေဒဆိုင်ရာနည်းလမ်းများမှညီမျှခြင်းများပေါ်တွင်အခြေခံသည်။ နေထွက်ချိန်နှင့်နေဝင်ချိန်ရလဒ်များသည်သီအိုရီအရတစ်မိနစ်အတွင်းတိကျသည် +/- ၇၂ ဒီဂရီစင်တီဂရိတ်အကြားရှိသောနေရာများအတွက်တစ်မိနစ်အတွင်းတိကျသည်။ ကျေးဇူးပြု၍ ဖော်ပြထားသောအချိန်မတိုင်မီကောင်းစွာရပ်တန့်ပါ။ ။ \n\n နေ့လည်: \n မြင်ကွင်းသည် GPS သို့မဟုတ် City မှရွေးချယ်ထားသည့်အတိုင်းလက်ရှိနေ့အတွက် Solar Noon ကိုပြသသည်။ အချိန်တိုင်းသည်ဆက်တင်များမှလုံခြုံမှုကိုထင်ဟပ်သည်။ (အောက်တွင်ကြည့်ပါ) \n \nDAWN: \n Dawn မျက်နှာပြင်သည်ရွေးထားသော Dawn ဖော်မြူလာကို setting များနှင့်နေရောင်ခြည်တွက်ချက်မှုအမျိုးမျိုးတို့ဖြင့်ပြသသည်။ အချိန်တိုင်းသည် setting များမှဘေးကင်းလုံခြုံမှုကိုထင်ဟပ်သည်။ (အောက်တွင်ကြည့်ပါ) \n \nGPS: \nGPS ကိုအင်တာနက်ဖွင့်ထားလျှင်အမှန်ခြစ်ပေးပါကမြို့ကိုအလိုအလျောက်သတ်မှတ်ပေးလိမ့်မည်။ Solar Sight သည်ဤနည်းအတိုင်းတိကျမှန်ကန်ပြီး GMT offset သည်အလိုအလျောက်ဖြစ်သောကြောင့်သင်၏တည်နေရာအတွက် GPS setting များကိုသုံးရန်အကြံပြုသည်။ \n \n လေ့လာမှုများ: \nOffset: \n ၎င်းကိုသင်အလိုအလျောက်သတ်မှတ်သည် GPS သီချင်းဆိုပါ။ သင်သည် City Search ကို setting တွင်သုံးလျှင် offset (GMT +- သင်၏ဒေသစံတော်ချိန်) ကိုရွေးရမည်။ \n လုံခြုံမှု၊ \n ဤအရာသည်စောစောလုပ်ရန်မွန်းတည့်ချိန်မှမိနစ်ကိုနုတ်ပြီးနောက်မှလုပ်ရန် Dawnrise သို့ထပ်ပေါင်းသည်။ ပုံသေနည်းသည်တစ်မိနစ်အတွင်းတိကျသည်၊ ပုံသေလုံခြုံရေးသည် ၁ မိနစ်ဖြစ်သည်။ \n မိုးသောက် - \n သင်အကြိုက်ဆုံး Dawnrise ကိုရွေးပါ။ Greek Bhante က Sunrise -30 (အလုံခြုံဆုံး) သို့ Sunrise -35 (စောစောပိုင်း) ကိုအကြံပြုသည်။ လုံခြုံစိတ်ချရမှုသည်ဤအချိန်၌ x-Minutes ကိုထည့်လိမ့်မည်။ \nTimer: \n Timer screen သည် hands free အသံအကြောင်းကြားချက်များကိုခွင့်ပြုသည်။ TTS ဆိုသည်မှာ \"စကားပြောမှစာသား \" ကိုဆိုလိုသည်။ TTS အသံအတိုးအကျယ်ကိုသင်၏မီဒီယာပမာဏဖြင့်ထိန်းချုပ်သည်။ ပုံမှန်အခြေအနေများတွင် TTS သည်ဖန်သားပြင်ဖွင့်ထားချိန်တွင်သာအလုပ်လုပ်သည်။ ဒါကိုဆန့်ကျင်ဖို့၊ မင်းက screen ကိုအမြဲနိုးနေအောင်လုပ်နိုင်တယ်၊ ဒါမှမဟုတ် \"TTS ကို screen off \" ဆိုတဲ့ feature နဲ့ဖွင့်နိုင်တယ်။ ဤအရာသည်သင်၏မျက်နှာပြင်ပိတ်ထားစဉ် \"background \" လုပ်ဆောင်ချက်ကိုဖွင့်ပေးလိမ့်မည်ဖြစ်ပြီးစက်ကို sleep mode သို့မ ၀ င်စေပါ။ ၎င်းကိုမှီခိုရန်ဤနောက်ခံအင်္ဂါရပ်ကိုသင်အကြိမ်အနည်းငယ်စမ်းသပ်သင့်သည်။ အချို့ဖုန်းများသို့မဟုတ်ဘက်ထရီချွေတာသည့်နည်းလမ်းများက၎င်းကိုအလုပ်မလုပ်စေပါ။ ဂင်္ဂါမြစ်၌ရေချိုးရန်အိန္ဒိယသို့သွားရန်ကျွန်ုပ်တို့မည်သည့်တာဝန်မျှမယူပါ။ Applicaton ကိုသင်ပိတ်လိုက်သောအခါနောက်ခံလုပ်ငန်းကိုရပ်တန့်ရန်နည်းလမ်းတစ်ခုကိုခေါ်သည်။ မင်းရဲ့ဖုန်းရဲ့အကြောင်းကြားချက်ဧရိယာထိပ်မှာပြထားတဲ့နေရောင်သင်္ကေတ (အက်ပ်) ကနောက်ခံမှာအလုပ်လုပ်နေတယ်ဆိုတာမင်းသိလိမ့်မယ်။ ဗုဒ္ဓဘာသာဝင် Sun သည် \"background mode \" တွင်မရှိလျှင်နေရောင်သင်္ကေတကိုသင်မြင်ရမည်မဟုတ်ပါ။ ဤအင်္ဂါရပ်ကို iOS အသုံးပြုသူများအတွက်မရနိုင်ပါ။ \n TTS ကြေငြာချက်များ၏အချိန်နာရီများသည်မိနစ်ပိုင်းကြားကာလများဖြစ်သည်။ \n\n ကိုယ်ပိုင်လွတ်လပ်ခွင့်-\n ကိုယ်ပိုင်လုံခြုံရေးကြေညာချက်အပြည့်အစုံမှာ:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n ကျွန်ုပ်တို့သတင်းအချက်အလက်စုဆောင်းခြင်းမပြုလုပ်ပါ။ အင်တာနက်ဆက်သွယ်မှုတစ်ခု အက်ပလီကေးရှင်းကိုပိတ်လိုက်သောအခါအပလီကေးရှင်းသည်နောက်ခံ၌မအလုပ်လုပ်ပါ။ သင် GPS ခလုတ်ကိုနှိပ်လိုက်သောအခါတစ်ခုတည်းသောတောင်းဆိုချက်အတွက် GPS သည်စေ့စပ်သည်။ ငါသိသလောက်တော့မင်းတော်တော်လုံခြုံပါတယ်၊ ဒါပေမယ့်ဒီ app ကို pub.dev website ကနေ packages တွေနဲ့သုံးခဲ့တယ်။ ထိုအထုပ်များစာရင်းကိုဤအက်ပလီကေးရှင်း၏လိုင်စင်စာမျက်နှာ၌လည်းကောင်း၊ ထို၌ဖော်ပြထားသော github ကုဒ်သိုလှောင်ရုံတွင်လည်းကောင်းဖော်ပြထားပါသည်။",
-    "about_content": "သည်ဗုဒ္ဓဘာသာဘုန်းတော်ကြီးများနှင့်သီလရှင်များအတွက်မျက်နှာပြင်အားလှန်ခြင်းမရှိဘဲ Solar Noon အချိန်ကိုပြသရန်အတွက်သေးငယ်သော app တစ်ခုဖြစ်သည်။ အဘယ်ကြောင့်ဆိုသော်ငါများသောအားဖြင့်ငါ့လက်ဖြင့်စားသောကြောင့်မွန်းတည့်ချိန်ကိုသိရန် \"hands free \" နည်းလမ်းရှိရန်လိုအပ်သည်။ ချဉ်းကပ်ခဲ့သည်။ ခုတော့ငါ့ဖုန်းကိုထိစရာမလိုဘဲငါစားနေတုန်းအချိန်ဘယ်လောက်ကျန်သေးလဲငါသိနိုင်ပြီ။ မြန်မာနိုင်ငံကလက်ဖက်စိမ်းကိုအစာအဖြစ်စားတဲ့အတွက်နေ့ခင်းဘက်မှာလက်ဖက်စိမ်းမသောက်ပါဘူး၊ ဒါကြောင့် timer ကလက်ဖက်ရည်သောက်ဖို့လည်းအဆင်ပြေတယ်။ အက်ပလီကေးရှင်းကိုသုံးရတာပျော်တယ်၊ မင်းလည်းဒီလိုပဲမျှော်လင့်တယ်။ \n \n ဘာကြောင့်အရေးကြီးတာလဲ။ \n ဗုဒ္ဓဘာသာဘုန်းတော်ကြီးကျောင်းစည်းကမ်းကိုလိုက်နာတဲ့သူတွေကိုမွန်းတည့်နောက်ပိုင်းမှာစားခွင့်မပြုဘူး။ စည်းမျဉ်းသည်နာရီထက်မဟုတ်ဘဲကောင်းကင်၌၎င်း၏အထွတ်အထိပ်၌နေနှင့်အညီဖြစ်သည်။ ဗုဒ္ဓခေတ်တွင်သူတို့မှာနာရီမရှိ။ အချက် ၈ ချက် ၁၀ ချက်ကိုလိုက်နာသောအခြားသူများသည်ဤအက်ပလီကေးရှင်းအတွက်အလွန်အကျိုးရှိသည်ကိုတွေ့ရှိနိုင်သည်။ \n \n ဤအက်ပလီကေးရှင်း၏တိကျမှုကိုအတည်ပြုရန် https://TimeandDate.com ကိုအကြံပြုပါသည်။ \n \n ဤအရာသည်နိဗ္ဗာန်သို့လျင်မြန်လုံခြုံစွာရောက်ရန်ကူညီပေးပါစေ။"
+   "noon":     "နေ့လည်၊မွန်းတည့်",
+   "dawn":      "အရုဏ်တက်",
+   "timer": "အချိန်မှတ်ကိရိယာ",
+   "gps":       "ဂျီပီအက်စ်",
+   "settings": "နောက်ခံ၊ဆက်တင်",
+   "help":   "အကူအညီ",
+   "about": "အကြောင်း၊ခန့်",
+   "licenses": "လိုင်စင်",
+   "not_set":  "မသတ်မှတ်ထား",
+   "solar_noon": "နေမွန်းတည့်",
+   "gmt_offset": "GMTအချိန်ကွာခြားချက်",
+   "hours":  "နာရီ",
+   "astronomical_twilight": "နက္ခတဗေဒဆည်းဆာ",
+   "nautical_twilight": "ရေကြောင်းဆည်းဆာ",
+   "civil_twilight": "မြို့ပြဆည်းဆာ",
+   "sunrise": "နေထွက်ချိန်",
+   "date": "ရက်စွဲ",
+   "current_time": "လက်ရှိအချိန်",
+   "late": "နောက်ဆုံး",
+   "time_left": "ကျန်ရှိသောအချိန်",
+   "speech_notify": "မိန့်ခွန်းအစီရင်ခံသည်",
+   "screen_always_on": "မျက်နှာပြင်အမြဲဖွင့်သည်",
+   "speech_in_background": "နောက်ခံစကားပြော",
+   "volume": "ထုထည်၊ပမာဏ",
+   "press_wait": "နှိပ်ပြီးစောင့်သည်",
+   "get_gps": "GPS ရသည်",
+   "save_gps": "GPS သိမ်းသည်",
+   "set_gps_city": "GPSမြိုတွင်ထားသည်",
+   "previous_gps_is": "ယခင်GPSဖြစ်သည်",
+   "decimal_number": "ဒသမကိန်း",
+   "current_offset_is": "လက်ရှကွာခြားချက်",
+   "safety": "လုံခြုံမှု",
+   "none": "ဘာမျှ၊ဘယ်ဟာမျှ",
+   "1minute":   "တစ်မိနစ်",
+   "2minutes": "နှစ်မိနစ်",
+   "3minutes": "သုံးမိနစ်",
+   "4minutes": "လေးမိနစ်",
+   "5minutes": "ငါးမိနစ်",
+   "10minutes": "ဆယ်မိနစ်",
+   "na_uyana": "နဦးရနာ",
+   "pa_auk": "ဖားအောက်",
+   "search_for_city": "မြို့ရှာရန်",
+    "gps_permission":               "GPS ခွင့်ပြုချက်",
+    "background_permission":        "နောက်ခံခွင့်ပြုချက်",
+    "error":                        "အမှား",
+    " notification":                "အကြောင်းကြားချက်",       
+    "running_in_background":        "နောက်ခံတွင်အလုပ်လုပ်နေမည်",
+    "background_initialized":       "နောက်ခံအစပြုသည်",     
+    "background_enabled":           "နောက်ခံကိုဖွင့်ပါ",   
+    "background_not_set":           "နောက်ခံကိုသတ်မှတ်မထားပါ",     
+    "background_init_error":        "နောက်ခံအစပြုအမှား",   
+    "background_disabled":          "နောက်ခံပိတ်ထားပါ",    
+    "ok":                           "အိုကေ",     
+    "gps_not_available":            "GPS မရနိုင်ပါ",
+    "help_content":    "calculations တွက်ချက်မှုများသည် နက္ခတဗေဒဆိုင်ရာအယ်လဂိုရီသမ်မှ ညီမျှခြင်းများပေါ်တွင်အခြေခံသည်ဟု Jean Mssus ကပြောသည်။နေဝင်ချိန်နှင့်နေထွက်ချိန်ရလဒ်များသည် +\\- 72 ဒီဂရီ လတ္တီကျုကြားရှိနေရာများတွင်တစ်မိနစ်အတွင်း သဘောတရားအရ တိကျသည်။ ဖော်ပြထားတဲ့အချိန်မရောက်ခင်ကျေးဇူးပြုပြီး စဉ်းစားပြီးရပ်လိုက်ပါ။ \n\n Noon \n GPS မှရွေးချယ်ထားသောလက်ရှိနေ့အတွက် Noon Screen မှ နေမွန်းတည့်ကိုပြသသည်။ အချိန်တိုင်း Settingမှ လုံခြုံရေးထင်ဟပ်သည်။ (see below) \n\n Dawn \" Dawn Screen\" သည် Setting မှ ရွေးချယ်ထားသော အရုဏ်ဦးဖော်မြူလာနှင့်အမျိုးမျိုးသော နေရောင်ခြည်တွက်ချက်မှုကိုပြသည်။ အချိန်တိုင်းSetting မှလုံခြုံမှုကိုထင်ဟပ်သည်။ \n Pa-Auk (Sunrise-40 minutes) \n Na-uyana (Sunrise -30minutes) (see below) \n\n GPS \n GPS အင်တာနက်ဖွင့်ထားပြီး အမှန်ခြစ်စစ်ဆေးထားလျှင် GPS ကမြို့ကိုအလိုအလျောက် ချိန်ပေးလိမ့်မည်။ GPS setting ကို သင့်ရဲ့နေရာအတွက်သုံးဖို့အကြံပေးချင်ပါတယ်။ Solar Noon က ဒီနည်းနှင့် အတိကျဆုံးဖြစ်ပါလိမ့်မည်။ နေရာများနဲ့တော့ ဒီအရာကို မစမ်းသပ်ရသေးပါ။\n Day Light Savings \n\n Settings \n Offset GPS ကိုအလိုအလျောက်ချိန်ပြီးဖြစ်သည်။ Setting မှာ သင် City Search ကိုသုံးလျှင် သင်အချိန်ကွာခြားချက်ကိုရွေးရမည်။ \n\nSaftey:\nThis subtracts minutes from the Noon time to make it earlier and adds to Dawnrise to make it later.  The formula is accurate within one minute so the default safety is 1 minute. \nDawn:\nChoose your prefered Dawnrise.  Na-Uyana uses Sunrise -30 minutes, and Pa-Auk uses Sunrise -40 minutes.  Safety will add x-Minutes to this time. \nTimer:\nThe Timer screen allows for hands free audio notifications.  Speech means \"Text to Speech\".  The volume is controlled by the slider.  Under normal conditions the speech notifications only work while the screen is on.  To fix this, you can make the screen stay awake with the \"Screen Always On\" switch, or you can enable the \"TTS with screen off\" feature.  This will enable \"background\" operation while your screen is off and prevent the device from entering sleep mode. You should test this background feature a few times before relying on it.  Some phones may not allow it. We are not responsible for anything.  When you close the applicaton, a method is called to stop the background task.  You will know the app is running in the background by the sun icon displayed in the top of your phone's notification area (where the time and signal bars are).  If Buddhist Sun is not in \"background mode\", you will not see a sun icon. This feature is not available for iOS users.\n The speech announcements are in the following minute intervals: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacy:\nA full privacy statement is located at:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information.",
+    "about_content":                    "Buddhist Sun is a small app for Buddhist monks and nuns to display the Solar Noon time specific to Buddhist monastic needs. Because I usually eat with my hands, I needed to have a \"hands free\" way to know when the Noon was approaching. The timer with voice notifications turned on helps me know the time left for eating.  I enjoy using the app, and I hope that you do too.\n\nWhy is this important?\nThose who follow Buddhist monastic rules are not allowed to eat after Noon.  The rule is according to the sun at its zenith in the sky rather than a clock. They did not have clocks in the Buddha's time.  Others who follow 8 or 10 precepts may find this app useful too.\n\nI recommend https://TimeandDate.com to verify this app's accuracy.This application is meant for \"present moment/location\" use.  \n\nMay this help you to reach Nibbāna quickly and safely!",
+    "gps_permission_content":           "Permission will be requested for GPS use. This allows for Buddhist Sun to know the GPS Location Data to calculate the sun's position. GPS is only collected once for each time the GPS button is pressed.  Data is not sent outside this app.",
+    "background_permission_content":    "Permission will be requested for background use.  This permission is needed to enable speech notifications to run properly the screen on.  Buddhist Sun will turn off this Background process when the switch is turned off or the app is closed.  Permission will be requested only one time if accepted."
 
 }
