--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,45 +1,239 @@
 {
-    "buddhistSun":              "佛教太阳",
-    "noon":                     "中午",
-    "dawn":                     "黎明",
-    "timer":                    "计时器",
-    "gps":                      "全球定位系统",
-    "settings":                 "设置",
-    "help":                     "帮助",
-    "about":                    "关于",
-    "licenses":                 "许可证",
-    "not_set":                  "没有设置",
-    "solar_noon":               "《太阳正午》",
-    "gmt_offset":               "格林威治标准时间偏移",
-    "hours":                    "小时",
-    "astronomical_twilight":    "天文双ght",
-    "nautical_twilight":        "《航海黄昏",
-    "civil_twilight":           "《公民黄昏》",
-    "sunrise":                  "日出",
-    "date":                     "日期",
-    "current_time":             "当前时间",
-    "late":                     "晚了",
-    "time_left":                "剩余时间",
-    "speech_notify":            "语音通知",
-    "screen_always_on":         "屏幕常亮",
-    "speech_in_background":     "在 backgr 中的演讲n",
-    "volume":                   "体积",
-    "press_wait":               "按下并等待 f new GPS.",
-    "get_gps":                  "获取 GPS",
-    "save_gps":                 "保存 GPS",
-    "set_gps_city":             "设置 GPS 城市名称by Internet",
-    "previous_gps_is":          "以前的 GPS 是",
-    "decimal_number":           "十进制数",
-    "current_offset_is":        "当前偏移",
-    "safety":                   "安全",
-    "none":                     "没有任何",
-    "minute1":                  "1分钟",
-    "minutes2":                 "2分钟",
-    "minutes3":                 "3分钟",
-    "minutes4":                 "4 分钟",
-    "minutes5":                 "5分钟",
-    "minutes10":                "10分钟",
-    "na_uyana":                 "纳乌亚娜",
-    "pa_auk":                   "Pa-Auk",
-    "search_for_city":          "搜索城市"
-}
+    "buddhistSun": "佛日",
+    "@buddhistSun": {
+      "description": "Title for app"
+    },
+    "noon": "正午",
+    "@noon": {
+      "description": "Noon"
+    },
+    "dawn": "明相",
+    "@dawn": {
+      "description": "Dawn"
+    },
+    "timer": "计时器",
+    "@timer": {
+      "description": "Timer"
+    },
+    "gps": "GPS",
+    "@gps": {
+      "description": "GPS"
+    },
+    "settings": "设置",
+    "@settings": {
+      "description": "Settings"
+    },
+    "help": "帮助",
+    "@help": {
+      "description": "Help"
+    },
+    "about": "关于",
+    "@about": {
+      "description": "About"
+    },
+    "licenses": "许可",
+    "@licenses": {
+      "description": "Licenses"
+    },
+    "not_set": "未设置",
+    "@not_set": {
+      "description": "Home screen when city is not set"
+    },
+    "solar_noon": "日中时分",
+    "@solar_noon": {
+      "description": "Time of High Noon .. sun at zenith"
+    },
+    "gmt_offset": "GMT 偏移",
+    "@gmt_offset": {
+      "description": "local offset from GMT "
+    },
+    "hours": "小时",
+    "@hours": {
+      "description": "hours on home screen"
+    },
+    "astronomical_twilight": "天文曙光",
+    "@astronomical_twilight": {
+      "description": "Astronomical Twilight"
+    },
+    "nautical_twilight": "航海曙光",
+    "@nautical_twilight": {
+      "description": "Nautical Twilight"
+    },
+    "civil_twilight": "民用曙光",
+    "@civil_twilight": {
+      "description": "Civil Twilight"
+    },
+    "sunrise": "日出",
+    "@sunrise": {
+      "description": "Sunrise"
+    },
+    "date": "Date",
+    "@date": {
+      "description": "日期"
+    },
+    "current_time": "现在时间",
+    "@current_time": {
+      "description": "Current Time"
+    },
+    "late": "已过",
+    "@late": {
+      "description": "Late"
+    },
+    "time_left": "剩余时间",
+    "@time_left": {
+      "description": "Time Left in timer"
+    },
+    "speech_notify": "语音提示",
+    "@speech_notify": {
+      "description": "computer speech to announce the time"
+    },
+    "screen_always_on": "屏幕常亮",
+    "@screen_always_on": {
+      "description": "switch for keeping the screen on (no sleeping)"
+    },
+    "speech_in_background": "后台语音",
+    "@speech_in_background": {
+      "description": "switch for letting the speech work in background"
+    },
+    "volume": "音量",
+    "@volume": {
+      "description": "Adjust Volume Control of speech"
+    },
+    "press_wait": "按下等待新的 GPS.",
+    "@press_wait": {
+      "description": "Message for button to get GPS"
+    },
+    "get_gps": "获取GPS",
+    "@get_gps": {
+      "description": "Button Title to get GPS"
+    },
+    "save_gps": "保存GPS",
+    "@save_gps": {
+      "description": "Button Title to save GPS"
+    },
+    "set_gps_city": "网络设置GPS城市名称",
+    "@set_gps_city": {
+      "description": "Message to tell the user to have the internet turned on for GPS City name lookup"
+    },
+    "previous_gps_is": "以前的GPS是",
+    "@previous_gps_is": {
+      "description": "Message to tell the previous GPS reading"
+    },
+    "decimal_number": "填入数字",
+    "@decimal_number": {
+      "description": "Message to tell the user to type decimal number."
+    },
+    "current_offset_is": "当前标准时差是",
+    "@current_offset_is": {
+      "description": "Message to tell the current local offset from GMT."
+    },
+    "safety": "安全时差",
+    "@safety": {
+      "description": "This is a number that will make the time earlier for safety of not going over.  Like a safety buffer"
+    },
+    "none": "无",
+    "@none": {
+      "description": "no safety"
+    },
+    "minute1": "1分钟",
+    "@minute1": {
+      "description": "time"
+    },
+    "minutes2": "2分钟",
+    "@minutes2": {
+      "description": "time"
+    },
+    "minutes3": "3分钟",
+    "@minutes3": {
+      "description": "3 minutes"
+    },
+    "minutes4": "4分钟",
+    "@minutes4": {
+      "description": "4 minutes"
+    },
+    "minutes5": "分钟",
+    "@minutes5": {
+      "description": "5 minutes"
+    },
+    "minutes10": "10分钟",
+    "@minutes10": {
+      "description": "10 minutes"
+    },
+    "pa_auk": "帕奥",
+    "@pa_auk": {
+      "description": "Pa-Auk monastery standar of Dawnrise time"
+    },
+    "na_uyana": "龙树林",
+    "@na_uyana": {
+      "description": "Na-Uyana monastery standar of Dawnrise time."
+    },
+    "search_for_city": "城市搜索",
+    "@search_for_city": {
+      "description": "instructions to type the city name inside edit field."
+    },
+    "gps_permission": "GPS启用",
+    "@gps_permission": {
+      "description": "Title for GPS Permission Dialog."
+    },
+    "background_permission": "后台运行",
+    "@background_permission": {
+      "description": "Title for Background Permission Dialog."
+    },
+    "error": "错误",
+    "@error": {
+      "description": "Title for error dialog."
+    },
+    "notification": "提示",
+    "@notification": {
+      "description": "Title for notification dialog."
+    },
+    "running_in_background": "后台运行中",
+    "@running_in_background": {
+      "description": "message running in background."
+    },
+    "background_initialized": "后台运行启动",
+    "@background_initialized": {
+      "description": "message initialized."
+    },
+    "background_enabled": "后台运行开通",
+    "@background_enabled": {
+      "description": "notification for enabled."
+    },
+    "background_not_set": "后台未设定",
+    "@background_not_set": {
+      "description": "background not set notification."
+    },
+    "background_init_error": "后台启动错误",
+    "@background_init_error": {
+      "description": "error message on init."
+    },
+    "background_disabled": "后台取消",
+    "@background_disabled": {
+      "description": "message to inform background disabled."
+    },
+    "ok": "OK",
+    "@ok": {
+      "description": "close dialog button."
+    },
+    "gps_not_available": "GPS无信号",
+    "@gps_not_available": {
+      "description": "gps not available."
+    },
+    "help_content": "算法:\n 计算依照让-米尔斯的天文算法公式进行。在南北纬72°间日出和日落的算值精度理论上偏差小于1分钟。请依预设时间恰当止息。 \n\n正午:\n正午屏面以简便方式显示GPS地址或所在城市的当日太阳日中时间。所有时间值参考了设定的安全时差。（见下）\n\n明相:\n明相屏面显示根据设定和相关太阳算法而产生的明相时间。 所有时间值计入设定的安全时差。 \n帕奥 = (日出时间-40分钟)。 \n龙树林 = (日出时间-30分钟)。 (见下) \n\nGPS:\n有网络且选择框打勾时，GPS会自动设定所在城市。 推荐使用GPS进行位置设定，这是计算正午时刻精度最佳的方式。此测试不包括 \"夏令时\" 区。\n\n设定:\n偏移:\n 此功能在 GPS状态下自动设置。 如果你选择在设定时使用城市搜索，你需要输入标准时差值 (GMT +- 本地时间). \n安全时差:\n 正午时间减去此值令其略早，明相时间加上此值令其略晚。 本算法中精度差小于1分钟，所以缺省安全时差设定为1分钟。\n明相:\n可选择适合您的明相时间。  龙树林以日出前30分钟为明相时分，而帕奥则以日出前40分钟为明相。安全时差会加在您选择的明相设定时间。 \n计时器:\n计时器屏面提供免操作语音提示。语音表示 \"文本转语音\"。 音量可以滑动调节。 通常情况下，屏面显示状态下语音提示可用。 若需, 您可以选择 \"屏幕常亮\" 以避免关屏或启动 \"关屏时使用TTS\" 功能。关屏时进入 \"后台\"运行，防止设备进入睡眠模式。 在确保其效果前，建议您多测试后台功能几次。有些手机可能不允许这类操作。我们不作任何保证。 关闭本应用，需要操作以停止后台运行任务。若你在手机顶部信息提示区（时间和信号等）看到本应用的太阳图标，则表示该应用正在后台运行中。否则，您将不会在此处见到该图标。该功能苹果系统用户尚未提供。\n 语音播报间隔为: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\n隐私:\n详细的隐私声明请见:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n 我们不搜集任何信息，我们也不建立网络连接。在关闭状态下，本应用不在后台运行。GPS功能只有在您按下GPS按钮才因此而有唯一的一次启用。虽然本应用基于来自pub.dev网站的其它程序包，但我可以肯定，您在使用时是安全的。上述程序包在本应用“许可”页面，以及GitHub程序库中，有详细列明。",
+
+    "@help_content": {
+      "description": "instructions to use app."
+    },
+    "about_content": " BuddhistSun（佛日）是一款面向佛教比丘、比丘尼的小应用，显示日中、明相等，满足日常修行生活需要。因为我本人常以手进食，我需要一种\"免于动手\"的方式知道何时日中临近。开通语音提醒功能的计时器可以方便地让我了解还剩下多少用斋的时间。我很开心手头有这款小应用，希望您也会喜欢上它。\n\n有那么重要吗？你也许会问。\n是的，确实重要。遵从佛制僧规的人都知道过午不可再食。中午时刻是根据太阳在天空中的最高点而不是闹钟来确定的，再说，佛世时也没有闹钟。其他持守八戒或者十戒的修行人也将会发现这款小应用的价值。\n\n我推荐使用 https://TimeandDate.com 来验证本应用的精确度。本应用致力于满足您\"此时/处\" 的实际需求。 \n\n谨愿此应用助您早日安稳无差达至涅槃！",
+    "@about_content": {
+    "description": "about content for menu item."
+    },
+    "gps_permission_content": "请允准使用GPS，以便本应用获得GPS地址数据来计算太阳位置。按下GPS钮，仅执行一次数据采集。所采集数据仅在本APP范围内使用。",
+    "@gps_permission_content": {
+      "description": "Notification to request gps permission."
+    },
+    "background_permission_content": "请允准后台启用，以确保屏面显示期间语音提示功能可以正常使用。当您关闭启用或关闭本APP时，后台运程将随之终止。同意启用后，则本请求不再发出。",
+    "@background_permission_content": {
+      "description": "Ask for permission for background."
+    }
+ }
